# folio

./: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .npmrc  .oxlintrc.json  .qmlformat.ini  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.arch  Dockerfile.debian  Dockerfile.ubuntu  Dockerfile.web  INTERNAL.md  README.md  back.oxlint.config.ts  biome.json  data copy.db  data-backup.db  data.db  docker-compose.yaml  eslint.config.mjs  fly.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-info.json  settings.json  stylelint.config.mjs  svelte.config.js  tsconfig.base.json  tsconfig.json  user_data.db  vite.config.js  (+2 more)
.changeset/: config.json  crisp-lemons-share.md  curly-moons-film.md  fiery-camels-occur.md  four-singers-fold.md  funky-rabbits-post.md  funny-sides-lose.md  gold-coins-joke.md  happy-parks-see.md  heavy-rules-jump.md  hungry-corners-write.md  orange-chefs-train.md  slick-words-wish.md  slow-tires-lay.md
.github/workflows/: ci.yml  code-cov.yml  deploy-website-old  deploy-website.yml  release-info.yml  release-worker.yml  release.yml  rust.yml
crates/core/: Cargo.toml
crates/folio-backend/: Cargo.toml
crates/folio-backend/src/: lib.rs
crates/folio-desktop/: .gitignore  Cargo.toml  INTERNAL.md  Tauri.toml  category_group_column copy.sql  category_group_column.sql  compile_time.txt  isodata.tsv  msixpack.toml
crates/folio-desktop/capabilities/: default.json  desktop.json
crates/folio-desktop/db/: schema.sql
crates/folio-desktop/m2/: 20251014000923_init_accounts.sql  20251014003657_init_categories.sql  20251014011212_init_transfers.sql  20251014171131_add_default_categories.sql  20251015151911_add_income_stream_to_income_table.sql  20251016165030_init_budget.sql  20251024161604_expenses_on_cascade_delete.sql  20251026011652_budget_on_cascade.sql  20260218002219_transactions_table.sql  20260224223111_on_cascade_delete.sql  20260322031759_delete_incomes_streams.sql  20260414175235_add_category_groups.sql  20260418225844_sortable_category_groups.down.sql  20260418225844_sortable_category_groups.up.sql
crates/folio-desktop/migrations/: 20251015150845_init_income_stream.sql  20251024025006_add_created_at.sql  20251024040938_add_created_at_to_income_streams.sql  20251024161604_expenses_on_cascade_delete.sql  20251024170219_income_on_cascade_delete.sql  20251026011652_budget_on_cascade.sql  20260215015544_add_categories_amount.sql  20260215233735_categories_deleted_at.sql  20260218002219_transactions_table.sql  20260219194515_transfer_expenses.sql  20260222231933_merge_income_streams_into_categories.sql  20260223011745_move_incomes_to_transactions_table.sql  20260224223111_on_cascade_delete.sql  20260308012526_delete_incomes_and_expenses_tables.sql  20260322031759_delete_incomes_streams.sql  20260414175235_add_category_groups.sql  20260418225844_sortable_category_groups.down.sql  20260418225844_sortable_category_groups.sql  20260621231800_add_category_group_column.sql  category_group.sql
crates/folio-desktop/queries/: edit_transactions.sql
crates/folio-desktop/src/: analytics.rs  command.rs  currency.rs  date.rs  db.rs  error.rs  frb_generated.rs  importer.rs  lib.rs  main.rs  money.rs  settings.rs  support.rs  update.rs
crates/folio-desktop/src/analytics/: mod.rs
crates/folio-desktop/src/service/: account.rs  budget.rs  category.rs  expense.rs  income.rs  income_stream.rs  mod.rs  transaction.rs
crates/folio-desktop/src/update/: mod.rs
crates/folio-desktop/tests/: account_service.rs  accounts.rs  budgets.rs  categories.rs  transactions.rs
crates/folio-helper/: Cargo.toml
crates/folio-helper/src/: main.rs
crates/folio-migrate/: Cargo.toml  README.md
crates/folio-qt/: Cargo.toml  build.rs  resources.qrc
crates/folio-qt/src/: account_list.rs  app_state.rs  category_list.rs  lib.rs  main.rs  transaction_table.rs
crates/folio-qt/ui/: AccountList.qml  AccountPanel.qml  AnalyticsPage.qml  App.qml  CategoriesSettingsPanel.qml  Colors.qml  EditableText.qml  GeneralSettingsPanel.qml  HomePage.qml  IconButton.qml  SettingsPanel.qml  SettingsTabButton.qml  StreamsSettingsPanel.qml  Style.qml  TransactionPanel.qml  TransactionTable 2.qml  TransactionTable.qml  qmldir
crates/folio-qt/ui/components/: IconButton.qml  TextLabel.qml
crates/folio-ui/: Cargo.toml
crates/folio-updater/: Cargo.toml
crates/msixpack/: .gitignore  Cargo.toml
crates/msixpack/src/: bundle.rs  download.rs  main.rs  manifest.rs
crates/worker/: Cargo.toml
crates/worker/src/: client.rs  middleware.rs
folio/: main.py  rc_resources.py  resources.qrc
folio/models/: account_list.py  category_list.py  transaction_table.py
folio/ui/: AccountPanel.qml  AnalyticsPage.qml  App.qml  GeneralSettingsPanel.qml  HomePage.qml  SettingsPanel.qml  SettingsTabButton.qml  Style.qml  TransactionPanel.qml  TransactionTable.qml  qmldir
frontend/folio/: flutter_rust_bridge.yaml  (+1 more)
migrations/: 20251014000923_init_accounts.sql  20251014171131_add_default_categories.sql  20251015151911_add_income_stream_to_income_table.sql
scripts/: download-sqlx.nu
src/: account.cpp  account.h  app.html  category.cpp  category.h  main.cpp  main.qml  temp.cpp  temp.h  transaction.cpp  transaction.h  utils.cpp  utils.h
src-tauri/: .gitignore  Cargo.toml  Tauri.toml  build.rs  tauri.conf-old.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251014000923_init_accounts.sql  20251014003657_init_categories.sql  20251014011212_init_transfers.sql  20251015151911_add_income_stream_to_income_table.sql  20251016165030_init_budget.sql  20251024040938_add_created_at_to_income_streams.sql  20251024170219_income_on_cascade_delete.sql
src-tauri/msix/: appxmanifest-draft.xml
src-tauri/src/: command.rs  error.rs  lib.rs  main.rs  money.rs  settings.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/service/: account.rs  budget.rs  category.rs  expense.rs  income.rs  income_stream.rs  mod.rs
src-tauri/tests/: categories.rs
tests/: temp.cpp  utils.cpp
(+122 files in other folders)
