[workspace]
resolver = "3"
members = ["packages/desktop/src-tauri", "packages/worker"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tauri = { version = "2.8.5", features = ["config-toml", "test"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.39.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
directories = "6.0.0"
tauri-plugin-os = "2.3.2"
iso_currency = { version = "0.5.3", features = ["with-serde", "iterator"] }
anyhow = "1.0.100"
reqwest = {version = "0.12.24",features = ["json"]}
httpmock = "0.8.2"
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.2.0",features = ["aws_lc_rs"]}
# Locked because rsa depends on this version
rand = "=0.8.5"
rsa = "0.9.9"

[workspace.dependencies.poem]
version = "3.1.12"
features = ["rustls","requestid"]

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
    "macros",
]
