[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Workspace crates
folio-core = {path = "crates/folio-core"}
# Tauri
tauri = { version = "2.8.5", features = ["config-toml", "test"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2.9.0"


# Everything else
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.39.0", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
directories = "6.0.0"
iso_currency = { version = "0.5.3", features = ["with-serde", "iterator"] }
anyhow = "1.0.100"
reqwest = {version = "0.12.24",features = ["json","native-tls","blocking"]}
httpmock = "0.8.2"
dotenvy = "0.15.7"
jsonwebtoken = {version = "10.2.0",features = ["rust_crypto"]}
rsa = "0.9.9"
dirs = "6.0.0"
glob = "0.3.3"
quick-xml = { version = "0.38.3", features = ["serde", "serialize"] }
tempfile = "3.23.0"
toml = { version = "0.9.8", features = ["serde"] }
zip = "6.0.0"
zip-extensions = "0.8.3"
clap = {version = "4.5.53",features = ["derive"]}


[workspace.dependencies.poem]
version = "3.1.12"
features = ["native-tls","requestid"]

[workspace.dependencies.sqlx]
version = "0.8.6"
features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
    "rust_decimal",
    "migrate",
    "macros",
]
