[project]
name = "folio"
version = "0.1.0"
description = ""
authors = [
    {name = "waku",email = "wakunguma13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyside6 (>=6.10.2,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry.scripts]
folio = "folio.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
