[package]
name = "folio"
version = "1.0.0"
description = "A free, open source budgeting app"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]
edition = "2024"
publish = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["config-toml"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = {version = "1.39.0",features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = {version = "0.4.42",features = ["serde"] }
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
directories = "6.0.0"

[dependencies.sqlx]
version = "0.8"
features = ["runtime-tokio", "sqlite", "uuid", "chrono", "rust_decimal", "migrate", "macros"]
