[package]
name = "folio"
version.workspace = true
description = "A free, open source budgeting app"
authors = ["Wakunguma Kalimukwa <wakunguma13@gmail.com>"]
edition = "2024"
publish = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dev-dependencies]
tempfile = "3.23.0"

[dependencies]
flutter_rust_bridge = "=2.11.1"
folio-core.workspace = true
reqwest.workspace = true
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
directories.workspace = true
tauri-plugin-os.workspace = true
iso_currency.workspace = true
sqlx.workspace = true
tauri-plugin-updater.workspace = true

[package.metadata.packager]
product-name = "Folio"
category = "Finance"
publisher = "Wakunguma Kalimukwa"
identifier = "com.wakunguma.folio"
formats = ["pacman"]
license-file = "../../../LICENSE"
homepage = "https://folio.wakunguma.com"
description = "A free, privacy focused budgeting app."
long-description = """
Folio is a privacy-focused budgeting application that helps you manage
your finances without compromising your data. All your financial data
stays on your device - no tracking, just simple budgeting.
"""
resources = [
    "../build",
    "../../../CHANGELOG.md",
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/128x128@2x.png",
    "icons/icon.icns",
    "icons/icon.ico",
]

[package.metadata.packager.linux]
generate-desktop-entry = true

[package.metadata.packager.pacman]
depends = [
    "cairo",
    "desktop-file-utils",
    "gdk-pixbuf2",
    "glib2",
    "gtk3",
    "hicolor-icon-theme",
    "libsoup",
    "pango",
    "webkit2gtk-4.1",
]
