[package]
name = "folio-helper"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
octocrab.workspace = true
