[package]
name = "folio-qt"
version.workspace = true
edition.workspace = true

[dependencies]
folio.workspace = true
sqlx.workspace = true
tokio.workspace = true
qttypes = { version = "0.2", features = [ "qtquick" ] }
tracing-subscriber.workspace = true
tracing.workspace = true
cpp = "0.5"
qmetaobject = {version = "0.2.10",features = ["log"]}
cstr = "0.2.12"

[build-dependencies]
cpp_build = "0.5"
semver = "1.0.27"

[package.metadata.packager]
product-name = "Folio-Qt"
category = "Finance"
publisher = "Wakunguma Kalimukwa"
identifier = "com.wakunguma.folio"
formats = ["nsis"]
homepage = "https://folio.wakunguma.com"
description = "A free, privacy focused budgeting app."
long-description = """
Folio is a privacy-focused budgeting application that helps you manage
your finances without compromising your data. All your financial data
stays on your device - no tracking, just simple budgeting.
"""
resources = [
]


