[package]
name = "folio-worker"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
poem.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
folio-core.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
httpmock.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
rsa.workspace = true
chrono.workspace = true

